--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,20 +7,23 @@
     "res:build": "rescript",
     "res:clean": "rescript clean",
     "res:dev": "rescript -w",
-    "dev": "vite",
+    "dev": "run-p 'res:dev' 'dev:vite'",
+    "dev:vite": "vite",
+    "watch:vite": "vite build --watch",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@preact/signals": "^2.0.1",
     "@rescript/core": "^1.6.1",
+    "@tailwindcss/vite": "^4.0.9",
+    "npm-run-all": "^4.1.5",
     "preact": "^10.26.2",
     "rescript": "^11.1.4"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.1",
     "@rescript/language-server": "^1.58.0",
-    "@tailwindcss/postcss": "^4.0.8",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.28",
     "tailwindcss": "^4.0.8",
