--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@greenlabs/ppx-spice": "^0.2.2",
     "@preact/signals": "^2.0.1",
     "@rescript/core": "^1.6.1",
     "@tailwindcss/vite": "^4.0.9",
