--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "run-p dev:*",
+    "dev:css": "npx @tailwindcss/cli -i ./src/app.css -o ./public/css/stylesheet.css --watch",
+    "dev:vite": "vite build --watch"
   },
   "repository": {
     "type": "git",
@@ -31,7 +34,9 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@preact/signals": "^2.0.3",
+    "@tailwindcss/cli": "^4.1.4",
     "baconjs": "^3.0.21",
+    "npm-run-all": "^4.1.5",
     "preact": "^10.26.5",
     "react": "npm:@preact/compat@^18.3.1",
     "react-dom": "npm:@preact/compat@^18.3.1"
